# workspace

./: .gitignore
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: HelloWorldTest.1416887627392.pdom  language.settings.xml  shareddefaults.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 6.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.equinox.security.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workbench.xml  workingsets.xml
Courses/C++/: DataStructureT1.cpp  DataStructureT2Array.cpp  DataStructureT2Pointer.cpp  DynamicMemoryT1.cpp  PointerT2.cpp  PointerT3Array.cpp  PointerT3Const.cpp  PointerT4Void.cpp  PointerT5Function.cpp  ReferenceT1  ReferenceT1.cpp  ReferenceT2  ReferenceT2.cpp
Courses/Statistic Mechanics/Lecture1/: direct_pi.py  direct_pi_multirun.py  markov_pi.py  markov_pi_multirun.py  pebble_basic.py  pebble_basic_inhomogeneous.py  pebble_basic_movie.py
Writing/: .gitignore  Evaluacion_ArquitecturaElectronica.txt  GmappingSLAM_Resume_Spanish.txt  HectorSLAM_Resume_Spanish.txt  Lista_Insumos.txt  tentativeIndex.txt
Writing/Resume_Dijkstra/v1/: Dijkstra_PathFindingAlgorithm.tex
Writing/Resume_DynamicWindowApproach/v1/: DynamicWindowApproach_CollisionAvoidance.tex
Writing/Resume_DynamicWindowApproach/v2/: DynamicWindowApproach_CollisionAvoidance.tex  bibliography.bib
Writing/Resume_Frontier-BasedExploration/: Frontier-Based_AutonomousExploration_Resume.tex
Writing/Resume_Frontier-BasedExploration/v1/: Frontier-Based_AutonomousExploration_Resume.tex
Writing/Resume_Frontier-BasedExploration/v2/: Frontier-Based_AutonomousExploration_Resume.tex
Writing/Resume_Gmapping/: Gmapping_Resume.aux  Gmapping_Resume.dvi  Gmapping_Resume.tex  HectorSLAM_Resume.aux  HectorSLAM_Resume.tex  resumeGmapping.tex
Writing/Resume_Gmapping/v1/: Gmapping_Resume.tex
Writing/Resume_Gmapping/v2/: Gmapping_Resume.tex  bibliography.bib
Writing/Resume_HectorSlam/v2/: HectorSLAM_Resume.tex
Writing/Resume_RoboCupWork/: RoboCupWork.CompetingForTheFuture_Resume  RoboCupWork_CompetingForTheFuture_Resume.aux  RoboCupWork_CompetingForTheFuture_Resume.bbl  RoboCupWork_CompetingForTheFuture_Resume.blg  RoboCupWork_CompetingForTheFuture_Resume.tex  RoboCupWork_CompetingForTheFuture_Resume.tex.bak  bibliography.bib
catkin/: .gitignore
catkin/src/atWork_msgs/: CMakeLists.txt  package.xml
catkin/src/atwork_launch/: CMakeLists.txt  package.xml
catkin/src/atwork_launch/config/: planner.yaml  realmapConf.yaml
catkin/src/atwork_launch/launch/: atwork_global.launch  atwork_global_network.launch  costmap.launch  exploration.launch  exploration_controller.launch  hokuyo_node.launch  move_base.launch  networkIp.machine  stage_gmapping.launch  startup_system.launch
catkin/src/atwork_launch/rviz_cfg/: Stage.rviz
catkin/src/atwork_launch/scripts/: foo.py  inverse_kinematic.py  inverse_kinematics_display.py  move_base_controller.py  timed_roslaunch.sh  timed_rosrun.sh
catkin/src/atwork_launch/urdf/: atwork_model.urdf.xacro
catkin/src/atwork_launch/world/: p1.world  willow-erratic.world
catkin/src/atwork_msgs/: CMakeLists.txt  package.xml
catkin/src/autonomo_launch/: CMakeLists.txt  package.xml
catkin/src/autonomo_launch/config/: arduino.yaml
catkin/src/autonomo_launch/launch/: automo_r.machine  autonomo_global.launch  autonomo_global_network.launch
catkin/src/autonomo_launch/scripts/: OdometryNode.py
catkin/src/autonomo_launch/src/: Odom.cpp
catkin/src/beginner_tutorials/: package.xml
catkin/src/beginner_tutorials/scripts/: talker.py
catkin/src/depthimage_to_laserscan/launch/: depth_to_laser.launch
catkin/src/kinematic_models/: CMakeLists.txt  package.xml
catkin/src/kinematic_models/cfg/: pid_vel.cfg
catkin/src/kinematic_models/config/: kinematicParameter.config.yaml
catkin/src/kinematic_models/scripts/: kinematicFourMecanum.py  odometryFourMecanum.py  server.py
catkin/src/openni2_launch/cmake/: openni2_launchConfig.cmake
catkin/src/openni2_launch/launch/: openni2.launch
catkin/src/robot_setup_tf_example/: CMakeLists.txt  package.xml
catkin/src/robot_setup_tf_example/src/: tf_broadcaster.cpp  tf_listener.cpp
catkin/src/simple_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
catkin/src/simple_layers/src/: grid_layer.cpp  simple_layer.cpp
catkin/src/teleop_twist_joy/config/: xbox.config.yaml  xbox_omni.config.yaml
catkin/src/teleop_twist_joy/launch/: teleop.launch
catkin/src/tutorials/testbot_description/: CMakeLists.txt  package.xml
catkin/src/tutorials/testbot_description/launch/: display.launch
catkin/src/tutorials/testbot_description/meshes/: hokuyo.dae
catkin/src/tutorials/testbot_description/rviz/: robot_display.rviz
catkin/src/tutorials/testbot_description/src/: parser.cpp
catkin/src/tutorials/testbot_description/urdf/: aRobot.urdf  aRobot.urdf.xacro  mRobot.urdf  macroed.urdf  macroed.urdf.xacro  my_robot.urdf  myfirst.urdf  oneMesh.sublime-workspace  oneMesh.urdf  robot_model.urdf.xacro
energia/sketchbook/Control_MotorNeveRest/: Control_MotorNeveRest.ino
energia/sketchbook/EjemploInterrupcion/: EjemploInterrupcion.ino
energia/sketchbook/InterfaceFourOmniWheels/: InterfaceFourOmniWheels.ino
energia/sketchbook/Interface_PID_Motor/: Interface_PID_Motor.ino
energia/sketchbook/Interfaz_4_Motores/: Interfaz_4_Motores.ino
energia/sketchbook/Interfaz_Motores/: Interfaz_Motores.ino
energia/sketchbook/RGB/: RGB.ino
gazebo/sdf/: box.sdf
sublimeProjects/: atwork.sublime-project  atwork.sublime-workspace
yarp/hello/: CMakeLists.txt  hello.cpp
yarp/helloworld/: CMakeLists.txt  main.cpp
yarp/helloworld/namer/: CMakeLists.txt  world.cpp  world.h
yarp/os/: CMakeLists.txt  summer.cpp
(+60 files in other folders)
