<?xml version="1.0"?>
<package>
  <name>atwork_msgs</name>
  <version>0.0.0</version>
  <description>The atwork_msgs package for custom message</description>
  <maintainer email="luis.alfredo.sega@gmail.com">Luis Servin</maintainer>

  <license>TODO</license>

  <url type="website">http://dcb.fi-c.unam.mx/TallerRobotica/</url>
  <author email="luis.alfredo.sega@gmail.com">Luis Servin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>