<?xml version="1.0"?>
<package>
  <name>autonomo_launch</name>
  <version>0.0.0</version>
  <description>The autonomo_launch package</description>
  <maintainer email="luis@todo.todo">luis</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>

  </export>
</package>