<?xml version="1.0"?>
<package>
  <name>kinematic_models</name>
  <version>0.0.0</version>
  <description>The kinematic_models package</description>
  <maintainer email="luis.alfredo.sega@gmail.com">Luis Servin</maintainer>

  <license>TODO</license>
  
  <url type="website">http://dcb.fi-c.unam.mx/TallerRobotica/</url>
  <author email="luis.alfredo.sega@gmail.com">Luis Servin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>